fix[Link T-716]: issue with z-index of column header of DataTable

--- a/src/components/dataTable/inner/columnHeaders.module.scss
+++ b/src/components/dataTable/inner/columnHeaders.module.scss
@@ -28,6 +28,7 @@
   position: sticky;
   background-color: var(--dataTableHeadingCellBackgroundColor);
   top: 0;
+  z-index: 1;
 }
 
 .ColumnHeaders {
